# keystone

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  demo.py  pyproject.toml
.claude/agents/: code-reviewer.md  documentor.md  migration-engineer.md  reconciliation-checker.md  test-writer.md
.claude/skills/keystone-architecture/: SKILL.md
.claude/skills/market-data-cleaning/: SKILL.md
.github/: README.md  copilot-instructions.md
.github/chatmodes/: code-reviewer.chatmode.md  documentor.chatmode.md  migration-engineer.chatmode.md  reconciliation-checker.chatmode.md  test-writer.chatmode.md
.github/instructions/: keystone-architecture.instructions.md  market-data-cleaning.instructions.md  python-patterns.instructions.md  python-testing.instructions.md
config/: README.md  constants.json
docs/: adding_a_product.md  branch-protection.md
scripts/: README.md  _common.py
scripts/periodic/: monthly_run.py  quarterly_run.py  yearly_run.py
scripts/playground/: README.md  example_idea.py
src/keystone/: config.py
src/keystone/adapters/: flat_file.py  repo_pricer.py
src/keystone/domain/: models.py  pricers.py  units.py
src/keystone/engine/: reval.py  risk.py  scenario_engine.py  sensitivities.py
src/keystone/orchestration/: backtest.py  margin_run.py
src/keystone/ports/: data.py
src/keystone/reconciliation/: harness.py
tests/: test_engine.py
