[project]
name = "keystone"
version = "0.1.0"
description = "Asset-agnostic clearing margin & HVaR engine (RepoClear / EquityClear / CaLM)"
requires-python = ">=3.11"
# Runtime deps stay MINIMAL by policy. Justify every addition; prefer the stdlib.
dependencies = ["numpy>=1.26", "polars>=1.0", "pydantic>=2.0"]

[project.optional-dependencies]
# Dev-only tools — never imported by src/. Install with: pip install -e ".[dev]"
dev = ["ruff", "mypy", "pytest", "hypothesis"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
disallow_any_generics = true
warn_return_any = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["keystone.engine.*", "keystone.reconciliation.*"]
# numpy-heavy modules: allow pragmatic Any at the numpy boundary only
disallow_any_explicit = false

[tool.ruff]
line-length = 95
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RET"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
